classDiagram
    class OllamaManager {
        -str _ollama_path
        -str _host
        -int _port
        -subprocess.Popen _process
        -threading.Thread _watchdog
        -bool _running
        -float _health_interval
        +__init__(ollama_path, host, port)
        +start() dict
        +stop() dict
        +restart() dict
        +is_healthy() bool
        +get_status() dict
        +ensure_running() bool
        +auto_start() dict
        -_launch_process()
        -_wait_ready(timeout) bool
        -_watchdog_loop()
        -_check_health() bool
    }

    class ModelManager {
        -OllamaManager _ollama
        -PromptBuilder _prompt_builder
        -StreamEngine _stream_engine
        -ThinkProcessor _think_processor
        -StallDetector _stall_detector
        -GenerateQueue _generate_queue
        -dict _stats
        -dict _model_profiles
        -bool _model_loaded
        -str _model_name
        +__init__()
        +load(model_name, progress_callback) dict
        +unload(model_name) dict
        +chat(message, model, max_tokens, history) dict
        +chat_stream(message, model, max_tokens, history, ...) Generator
        +stop_generation()
        +status() dict
        +get_loaded_llms() list
        +get_available_models() list
        -_get_profile(model_name) dict
        -_get_default_llm() str
        +calc_kb_context_budget() dict
    }

    class StreamEngine {
        -ModelManager _mm
        +__init__(model_manager)
        +run(message, model, max_tokens, history, ...) Generator
        -_call_ollama_stream(messages, model, max_tokens, temperature, top_p) Generator
        -_parse_sse_line(line) dict
        -_handle_ollama_error(error) tuple
    }

    class PromptBuilder {
        -ModelManager _mm
        -list _system_prompt_rules
        +__init__(model_manager)
        +build(messages, model_name, context_cache, ...) list
        +get_system_prompt_rules() list
        -_truncate_history(messages, max_chars) list
    }

    class ThinkProcessor {
        +__init__()
        +strip_think(text) str
        +process_reasoning(reasoning_content) dict
    }

    class GenerateQueue {
        -list _queue
        -int _seq
        +submit(priority, timeout) GenerateTicket
        +release(ticket)
        +cancel_all_low()
        +queue_info dict
    }

    class GenerateTicket {
        -GenerateQueue _queue
        -int ticket_id
        -str priority
        +release()
    }

    class StallDetector {
        +__init__(stall_check_tokens, repeat_window, repeat_threshold)
        +check_stall(token_timestamps, now, profile) bool
    }

    ModelManager --> OllamaManager : manages
    ModelManager --> PromptBuilder : uses
    ModelManager --> StreamEngine : uses
    ModelManager --> ThinkProcessor : uses
    ModelManager --> StallDetector : uses
    ModelManager --> GenerateQueue : uses
    StreamEngine ..> GenerateQueue : acquires ticket
    StreamEngine ..> ThinkProcessor : processes reasoning
    GenerateTicket --> GenerateQueue : belongs to
